<resources>
    <string name="app_name">Haskell</string>
    <string name="version">v0.1.0</string>
    <string name="haskell">Haskell</string>
    <string name="action_settings">Action Settings</string>
    <string name="action_favorite">Action Favorite</string>
    <string name="action_save">save as...</string>
    <string name="send">send</string>
    <string name="test_text">
       Haskell Anywhere v0.1.0 by lucciola\n
    </string>
    <string name="added_define">OK, added define: </string>
    <string name="invalid_input">Invalid input!</string>
    <string name="help">
        Commands Available from the prompt:\n
        \t&lt;statement&gt;\tevaluate/run &lt;statement&gt;
    </string>
    <string name="equals">=</string>
    <string name="daller">$</string>
    <string name="dot">.</string>
    <string name="comma">,</string>
    <string name="single_quote">\'</string>
    <string name="quote">\"</string>
    <string name="back_quote">`</string>
    <string name="parentheses_left">(</string>
    <string name="parentheses_right">)</string>
    <string name="bracket_left">[</string>
    <string name="bracket_right">]</string>
    <string name="angle_bracket_left"><![CDATA[<]]></string>
    <string name="minus">-</string>
    <string name="angle_bracket_right"><![CDATA[>]]></string>
    <string name="plus">+</string>
    <string name="star">*</string>
    <string name="slash">/</string>
    <string name="back_slash">\\</string>
    <string name="down_button">down button</string>
    <string name="up_button">up button</string>
    <string name="send_button">send button</string>
    <string name="action_filter">filter</string>
</resources>
